etl-api/tests/integration/snapshots/r#mod__integration__destination_test__all_destinations_can_be_read-2.snap
---
source: etl-api/tests/integration/destination_test.rs
expression: destination.config
---
BigQuery {
    project_id: "project-id-updated",
    dataset_id: "dataset-id-updated",
    service_account_key: SerializableSecretString(
        SecretBox<str>([REDACTED]),
    ),
    max_staleness_mins: Some(
        10,
    ),
    max_concurrent_streams: 1,
}
