etl-api/tests/integration/snapshots/r#mod__integration__destination_test__all_destinations_can_be_read.snap
---
source: etl-api/tests/integration/destination_test.rs
expression: destination.config
---
BigQuery {
    project_id: "project-id",
    dataset_id: "dataset-id",
    service_account_key: SerializableSecretString(
        SecretBox<str>([REDACTED]),
    ),
    max_staleness_mins: None,
    max_concurrent_streams: 1,
}
