etl-api/tests/integration/snapshots/r#mod__integration__destination_test__an_existing_destination_can_be_updated.snap
---
source: etl-api/tests/integration/destination_test.rs
expression: response.config
---
BigQuery {
    project_id: "project-id-updated",
    dataset_id: "dataset-id-updated",
    service_account_key: SerializableSecretString(
        SecretBox<str>([REDACTED]),
    ),
    max_staleness_mins: Some(
        10,
    ),
    max_concurrent_streams: 1,
}
